# deize-method

./: .gitignore  pyproject.toml  setup.cfg  setup.py
.github/actions/cache-packages/: action.yml
.github/actions/cache-poetry/: action.yml
.github/workflows/: auto-approve.yml  dev-python-format-lint-publish.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  python-format-lint-publish-test.yml  python-format-lint-publish.yml
my_method/: __init__.py  common.py  directory_listing.py  my_input.py
src/: __init__.py  directory_create.py  directory_listing.py
src/my_method/: common.py  directory_listing.py
src/my_method/directory_listing/: directory_listing.py
src/my_method/list_opr/: __init__.py  list_opr.py
src/my_method/my_input/: __init__.py  my_input.py
src/my_method/wav_ndarray/: __init__.py  wav_ndarray.py
tests/: test_directory_create.py  test_directory_listing.py  test_list_opr.py  test_my_input.py  test_version_check.py  test_wav_ndarray.py
