[metadata]
name = my-method
version = attr: my_method.__version__.__version__
author = ymorishima030
author_email = ymorishima@hochiki.co.jp
description = This is a my method package.
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
packages = my_method
